[package]
name = "pal-server-manage-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "1.36.0", features = ["full", "time"] }
log = "0.4.21"
simple_logger = "4.3.3"
fxhash = "0.2.1"
walkdir = "2.5.0"
chrono = "0.4.35"
dotenv = "0.15.0"